fix responsive settings

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,9 +2,9 @@
 .report-box {
 /*	background-color: grey;*/
 	padding: 1px;
-	width: 150px;
+	width: 100%;
 /*	height: 200px;*/
-	float: left;
+	/*float: left;*/
 	
 }
 
