--- a/css/custom.css
+++ b/css/custom.css
@@ -7,3 +7,54 @@
 	/*float: left;*/
 	
 }
+
+/*div {
+	border-style: solid;
+	border-width: 1px;
+	border-color: yellow;
+	margin: 5px;
+}*/
+
+.wind-dot-container {
+	width: 200px;
+	height: 200px;
+}
+
+.wind-dot-arrow {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+}
+
+.wind-dot-circle {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	background-color: orange;
+}
+
+.wind-dot-point {
+	position: absolute;
+  top:0px;
+  right:0px;
+	width: 100px;
+	height: 100px;
+	background-color: orange;
+	z-index: 5;
+}
+
+.wind-dot-data {
+	/*text-align: center;*/
+	position: absolute;
+	z-index: 10;
+	width: 150px;
+	margin-top: 0;
+	margin-right: auto;
+	margin-bottom: 0;
+	margin-left: auto;
+	margin: 0 auto 0 auto;
+}
+
+
+
