--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,5 @@
 
+
 .report-box {
 /*	background-color: grey;*/
 	padding: 1px;
@@ -8,29 +9,29 @@
 	
 }
 
-div {
+/*div {
 	border-style: solid;
 	border-width: 1px;
 	border-color: yellow;
 	margin: 5px;
-}
+}*/
 
 .wind-dot-container {
 	position: relative;
-	width: 200px;
-	height: 200px;
+	width: 150px;
+	height: 150px;
 }
 
 .wind-dot-arrow {
 	position: absolute;
-	width: 200px;
-	height: 200px;
+	width: 100%;
+	height: 100%;
 }
 
 .wind-dot-circle {
 	position: absolute;
-	width: 200px;
-	height: 200px;
+	width: 100%;
+	height: 100%;
 	border-radius: 50%;
 	background-color: orange;
 }
@@ -39,8 +40,8 @@ div {
 	position: absolute;
   top:0px;
   right:0px;
-	width: 100px;
-	height: 100px;
+	width: 50%;
+	height: 50%;
 	background-color: orange;
 	z-index: 5;
 }
@@ -49,12 +50,12 @@ div {
 	text-align: center;
 	position: absolute;
 	z-index: 10;
-	width: 180px;
+	width: 80%;
 	left: 50%;	
-  margin-left: -90px;
+  margin-left: -40%;
 	top: 50%;
-  height: 150px;
-  margin-top: -62px;
+  height: 80%;
+  margin-top: -40%;
 
 }
 
@@ -74,5 +75,124 @@ div {
 	font-size: 20px;
 }
 
+// Small screens
+@media only screen { } /* Define mobile styles */
+
+@media only screen and (max-width: 40em) { 
+	.wind-dot-container {
+		width: 250px;
+		height: 250px;
+	}
+
+	.wind-dot-data {
+		width: 80%;
+		left: 50%;	
+	  margin-left: -40%;
+		top: 50%;
+	  height: 80%;
+	 	margin-top: -30%;*/
+
+	}
+
+	.windspeed {
+		font-size: 44px;
+	}
+
+	.direction {
+		padding-top: 20px;
+		font-size: 30px;
+	}
+
+	.time {
+		font-size: 20px;
+	}
+
+	.date {
+		padding-bottom: 10px;
+	}
+
+} /* max-width 640px, mobile-only styles, use when QAing mobile issues */
+
+// Medium screens
+@media only screen and (min-width: 40.063em) { } /* min-width 641px, medium screens */
+
+@media only screen and (min-width: 40.063em) and (max-width: 64em) { 
+	.wind-dot-container {
+		width: 130px;
+		height: 130px;
+		margin-bottom: 20px;
+	}
+
+	.wind-dot-data {
+		width: 80%;
+		left: 50%;	
+	  margin-left: -40%;
+		top: 50%;
+	  height: 80%;
+	  margin-top: -33%;*/
+	}
+
+	.windspeed {
+		font-size: 26px;
+	}
+
+	.direction {
+		padding-top: 5px;
+		font-size: 13px;
+	}
+
+	.time {
+		font-size: 18px;
+	}
+
+	.date {
+		font-size: 12px;
+	}
+} /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+
+// Large screens
+@media only screen and (min-width: 64.063em) { } /* min-width 1025px, large screens */
+
+@media only screen and (min-width: 64.063em) and (max-width: 90em) { 
+	.wind-dot-container {
+		width: 130px;
+		height: 130px;
+		margin-bottom: 20px;
+	}
+
+	.wind-dot-data {
+		width: 80%;
+		left: 50%;	
+	  margin-left: -40%;
+		top: 50%;
+	  height: 80%;
+	  margin-top: -33%;*/
+	}
+
+	.windspeed {
+		font-size: 26px;
+	}
+
+	.direction {
+		padding-top: 5px;
+		font-size: 13px;
+	}
+
+	.time {
+		font-size: 18px;
+	}
+
+	.date {
+		font-size: 12px;
+	}
+} /* min-width 1024px and max-width 1440px, use when QAing large screen-only issues */
+
+// XLarge screens
+@media only screen and (min-width: 90.063em) { } /* min-width 1441px, xlarge screens */
+
+@media only screen and (min-width: 90.063em) and (max-width: 120em) { } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
+
+// XXLarge screens
+@media only screen and (min-width: 120.063em) { } /* min-width 1921px, xlarge screens */
 
 
